--- a/app.html
+++ b/app.html
@@ -12,7 +12,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: #4CAF50;
+            background-color: #005E54; /* Cor atualizada */
             color: white;
             text-align: center;
             padding: 10px 0;
