--- a/app.html
+++ b/app.html
@@ -26,11 +26,16 @@
         .typing {
             display: none;
         }
+        .logo {
+            height: 40px;
+            vertical-align: middle;
+        }
     </style>
 </head>
 <body>
 
 <div class="header">
+    <img src="https://s3.typebot.io/public/workspaces/clx0nz6s5000usqgfbd0ewkxh/typebots/clxcnni9a002it2mo3l7t2y9a/blocks/isdc9mkdenjtnkh6lpjajaf3?v=1718246856024" alt="Logo" class="logo">
     Chat Bot
     <span id="status" class="status typing">Digitando...</span>
 </div>
@@ -56,4 +61,5 @@
 
 </body>
 </html>
+
 
