--- a/app.html
+++ b/app.html
@@ -7,12 +7,15 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
         }
         .header {
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: #005E54; /* Cor atualizada */
+            background-color: #005E54; /* Cor de backup */
+            background-image: url('https://github.com/wallacefaz/concurso/blob/main/background.png?raw=true'); /* Plano de fundo */
+            background-size: cover;
             color: white;
             text-align: center;
             padding: 10px 0;
