--- a/app.html
+++ b/app.html
@@ -17,9 +17,11 @@
             background-image: url('https://github.com/wallacefaz/concurso/blob/main/background.png?raw=true'); /* Plano de fundo */
             background-size: cover;
             color: white;
-            text-align: center;
-            padding: 10px 0;
+            text-align: left;
+            padding: 10px 20px;
             z-index: 1000;
+            display: flex;
+            align-items: center;
         }
         .status {
             display: inline-block;
@@ -31,7 +33,9 @@
         }
         .logo {
             height: 40px;
-            vertical-align: middle;
+            width: 40px;
+            border-radius: 50%;
+            margin-right: 10px;
         }
     </style>
 </head>
@@ -39,8 +43,10 @@
 
 <div class="header">
     <img src="https://s3.typebot.io/public/workspaces/clx0nz6s5000usqgfbd0ewkxh/typebots/clxcnni9a002it2mo3l7t2y9a/blocks/isdc9mkdenjtnkh6lpjajaf3?v=1718246856024" alt="Logo" class="logo">
-    Chat Bot
-    <span id="status" class="status typing">Digitando...</span>
+    <div>
+        <div>Chat Bot</div>
+        <span id="status" class="status typing">Digitando...</span>
+    </div>
 </div>
 
 <div style="margin-top: 60px;">
@@ -64,5 +70,4 @@
 
 </body>
 </html>
-
 
