--- a/app.html
+++ b/app.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
+            padding: 0;
         }
         .header {
             position: fixed;
@@ -25,7 +26,6 @@
         }
         .status {
             display: inline-block;
-            margin-left: 10px;
             font-size: 14px;
         }
         .typing {
@@ -36,6 +36,10 @@
             width: 40px;
             border-radius: 50%;
             margin-right: 10px;
+        }
+        .content {
+            margin-top: 80px; /* Ajustar conforme a altura do cabeçalho */
+            padding: 20px;
         }
     </style>
 </head>
@@ -49,7 +53,7 @@
     </div>
 </div>
 
-<div style="margin-top: 60px;">
+<div class="content">
     <!-- Conteúdo da página -->
     <p>Este é um exemplo de página com um cabeçalho fixo.</p>
     <button onclick="simulateBotResponse()">Simular Resposta do Bot</button>
@@ -70,4 +74,3 @@
 
 </body>
 </html>
-
