--- a/app.html
+++ b/app.html
@@ -15,8 +15,9 @@
             top: 0;
             width: 100%;
             background-color: #005E54; /* Cor de backup */
-            background-image: url('https://github.com/wallacefaz/concurso/blob/main/background.png?raw=true'); /* Plano de fundo */
+            background-image: url('https://github.com/wallacefaz/concurso/raw/main/background.png'); /* Plano de fundo */
             background-size: cover;
+            background-repeat: no-repeat;
             color: white;
             text-align: left;
             padding: 10px 20px;
