--- a/app.html
+++ b/app.html
@@ -14,7 +14,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: #005E54; /* Cor de backup */
+            background-color: ; /* Cor de backup */
             background-image: url('https://github.com/wallacefaz/concurso/raw/main/background.png'); /* Plano de fundo */
             background-size: cover;
             background-repeat: no-repeat;
